--- a/linkedin-server/package.json
+++ b/linkedin-server/package.json
@@ -1,5 +1,16 @@
 {
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2"
-  }
+  },
+  "name": "linkedin-server",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
